# rag-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  environment.yml  pyproject.toml  test.ipynb
app/: chain.py  chromadbtest.py  constants.py  ingest.py  load_and_split.py  prepare_vectordb.py  server.py  store.py  testchain.py
app/engine/: embeddings.py  prompts.py
app/storage/data/: sampleppt.pptx
app/storage/db/: chroma.sqlite3
app/storage/embeddings/: embeddings0b400b9e-df1e-58db-a32f-7a1bec24aeec  embeddings154a50db-ec31-55d8-a087-0eeeb0187e0b  embeddings1a18f803-c778-5b33-b5b6-f5909c213e6d  embeddings2b552fbf-ac3d-5007-b53d-fa7387e9d1d3  embeddings3630e22a-45de-51ea-9a3e-9fa8a26a7ac2  embeddings40cc8198-694a-5a34-bf69-f6fd99bce6cb  embeddings4115a9cc-f2c0-5cb7-bde4-1b330b7539dd  embeddings440d2857-26fb-5fe7-9ffb-a7758da19154  embeddings51bb3004-80fc-5fea-b7f7-c1230d099ddf  embeddings5832d61a-e96e-5ce6-9973-8e9f3939ea6f  embeddings63280e92-1ff8-592a-9779-e777f3f20c07  embeddings68019b12-d273-522b-a19c-a1daa07ce938  embeddings736ba93c-d268-5977-8e9a-343fa80343f0  embeddings794ff9fd-47e9-5ae1-bd80-df0136af1adc  embeddings7c81b1e8-359f-51b3-93bb-7a668c17ab91  embeddings7f85eda2-1735-537c-80d3-665f0d87e16c  embeddings82b8128e-a238-56f6-b990-8d1423e10bbe  embeddings84c5a761-2d1c-540d-a032-df961e86bf51  embeddings8a2879b1-54e0-5556-9d28-2f8efbb05494  embeddings8a40c4ba-32ea-56ea-bd45-2928d885fbe2  embeddings8b9ae0c3-a4da-5366-9673-9f30d1fabfa1  embeddings91fcf369-f84e-5f59-9506-4a6134905ad6  embeddings96562f8b-ac62-564f-bf0a-72043a871724  (+18 more)
